--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="text1">
             
             <p>We don't play with food.</p>
-            <p>When i was a small boy,my father told me not to recommend a church or a woman to anyone and i have found it wise never to recommend a resturant either. Something always goes wrong with cheese souffle`.</p>
+            <p>When I was a small boy,my father told me not to recommend a church or a woman to anyone and i have found it wise never to recommend a resturant either. Something always goes wrong with cheese souffle`.</p>
        <button >order now</button>
         </div>
 
@@ -44,7 +44,7 @@
             <div class="col-md-2">
                 <img src="./images/eating_together.png" alt="eating_together" width="300px" height="300px">
                 <h2>Eating Together</h2>
-                <p>There is soething profoundly satisfying about sharing a meal.Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
+                <p>There is something profoundly satisfying about sharing a meal.Eating together, breaking bread together, is one of the oldest and most fundamentally unifying of human experiences.</p>
 
             </div>
         </div>
