--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="./images/eating_together (1).png" alt="This is a picture of two people eating" height="550">
         <div class="main-2">
             <h1 class="food">Eat together</h1><br>
-        <p>There is Something profoundly satisfying about sharing. Eating together, breaking bread togther, is one of the oldest and most foundamentally unifying of human experiences.</p>
+        <p>There is something profoundly satisfying about sharing. Eating together, breaking bread togther, is one of the oldest and most foundamentally unifying of human experiences.</p>
         </div>
         </div>
 
@@ -151,7 +151,7 @@
         <span>
             <h3>Follow</h3>
             <p>GET THE LATEST NEWS.SIGNUP FOR OUR NEWSLETTERS</p>
-            <p>@Website Desing</p>
+            <p>@Website Design</p>
         </span>
         <button type="submit" id="send-btn">Send</button>
     </footer>
