Modified html and CSS

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <span>
             <h3>Follow</h3>
             <p>GET THE LATEST NEWS.SIGNUP FOR OUR NEWSLETTERS</p>
-            <p>@Website Desing</p>
+            <p>@Website Design</p>
         </span>
         <button type="submit" id="send-btn">Send</button>
     </footer>
