--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="./images/image 5.png" alt="pilau_dish">
         </div>
 
-        <div id="steet-food">
+        <div id="street-food">
             <h1 class="street"><span class="hot-deals">Street</span><span class="food">Food</span></h1>
             <h2>We dont't play with Food</h2>
             <p>When I was a small boy, my father told me never recommend a church or a woman to anyone. And I have it wise never to recommend anyone to restaurant either. Something always goes wrong with the cheese souffle. </p>
