--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <img src="./images/image 5.png" alt="pilau_dish">
             <img src="./images/image 5.png" alt="pilau_dish">
         </div>
-      <div class="curved-picture"></div>
-
+        <div class="semi-circle"></div>
         <div id="street-food">
             <h1 class="street"><span class="hot-deals">Street</span><span class="food">Food</span></h1>
             <h2>We dont't play with Food</h2>
